force-app/main/default/objects/blng__InvoiceScheduler__c/blng__InvoiceScheduler__c.object-meta.xml
<CustomObject>
    <customHelpPage>blng__InvoiceSchedulerHelp</customHelpPage>
    <label>Invoice Scheduler</label>
    <nameField>
        <label>Invoice Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>