force-app/main/default/objects/blng__InvoiceScheduler__c/fields/blng__ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>blng__ApexJobId__c</fullName>
    <inlineHelpText>Unique ID for the Salesforce job.</inlineHelpText>
    <label>Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>