force-app/main/default/objects/blng__InvoiceScheduler__c/fields/blng__AutomaticallyPostInvoices__c.field-meta.xml
<CustomField>
    <fullName>blng__AutomaticallyPostInvoices__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if invoices should be posted by default. Otherwise, invoices are generated as drafts.</inlineHelpText>
    <label>Automatically Post Invoices</label>
    <type>Checkbox</type>
</CustomField>