force-app/main/default/objects/blng__InvoiceScheduler__c/fields/blng__BillUsageCharges__c.field-meta.xml
<CustomField>
    <fullName>blng__BillUsageCharges__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select if your order product’s charge type is Usage.</inlineHelpText>
    <label>Bill Usage Charges</label>
    <type>Checkbox</type>
</CustomField>