force-app/main/default/objects/blng__InvoiceScheduler__c/fields/blng__IncludeAllCurrencies__c.field-meta.xml
<CustomField>
    <fullName>blng__IncludeAllCurrencies__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select yes to process all currencies for this invoice.</inlineHelpText>
    <label>Include All Currencies</label>
    <type>Checkbox</type>
</CustomField>