force-app/main/default/objects/blng__InvoiceScheduler__c/fields/blng__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Date invoice will be created. Used to determine Invoice’s due date.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>