force-app/main/default/objects/blng__InvoiceScheduler__c/fields/blng__InvoiceDayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceDayOfWeek__c</fullName>
    <inlineHelpText>If invoice type is weekly, select a number for the day of the week. Sunday=1</inlineHelpText>
    <label>Invoice Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__DayOfWeek</valueSetName>
    </valueSet>
</CustomField>