force-app/main/default/objects/blng__InvoiceScheduler__c/fields/blng__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>blng__StartDateTime__c</fullName>
    <inlineHelpText>Date and time the invoice scheduler process begins.</inlineHelpText>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>