force-app/main/default/objects/blng__InvoiceScheduler__c/fields/blng__TargetDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDayOfMonth__c</fullName>
    <inlineHelpText>Determines what gets billed based on the next billing date&apos;s day of the month.</inlineHelpText>
    <label>Target Day Of Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__DayOfMonth</valueSetName>
    </valueSet>
</CustomField>