force-app/main/default/objects/blng__InvoiceScheduler__c/fields/blng__TargetDayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDayOfWeek__c</fullName>
    <inlineHelpText>Determines what gets billed based on the next billing date&apos;s day of the week.</inlineHelpText>
    <label>Target Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__DayOfWeek</valueSetName>
    </valueSet>
</CustomField>